--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,8 +36,9 @@ const projects = (await getCollection('work'))
 				>
 					<div class="roles">
 						<Pill><Icon icon="palette" size="1.33em" /> Artist</Pill>
-						<Pill><Icon icon="microphone-stage" size="1.33em" /> Speaker</Pill>
-						<Pill><Icon icon="pencil-line" size="1.33em" /> Writer</Pill>
+						<Pill><Icon icon="windows" size="1.33em" /> Windows OS lover</Pill>
+						<Pill><Icon icon="desktop-tower" size="1.33em" /> Helpdesk</Pill>
+						<Pill><Icon icon="pencil-line" size="1.33em" /> Logo Designer</Pill>
 					</div>
 				</Hero>
 
