--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,11 +13,9 @@ const textLinks: { label: string; href: string }[] = [
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
 	{ label: 'Twitter', href: 'https://twitter.com/me', icon: 'twitter-logo' },
-	{ label: 'Twitch', href: 'https://twitch.tv/me', icon: 'twitch-logo' },
-	{ label: 'GitHub', href: 'https://github.com/me', icon: 'github-logo' },
-	{ label: 'CodePen', href: 'https://codepen.io/me', icon: 'codepen-logo' },
-	{ label: 'dribbble', href: 'https://dribbble.com/me', icon: 'dribbble-logo' },
-	{ label: 'YouTube', href: 'https://www.youtube.com/@me/', icon: 'youtube-logo' },
+	{ label: 'GitHub', href: 'https://github.com/Ludeth', icon: 'github-logo' },
+	{ label: 'Linkedin', href: 'https://it.linkedin.com/in/davide-di-marsilio', icon: 'linkedin-logo' },
+	{ label: 'Discord', href: 'https://discordapp.com/users/388026142742937600', icon: 'discord-logo' },
 ];
 ---
 
