Changed pills and some texts

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,8 +12,9 @@ const currentYear = new Date().getFullYear();
 		<p>&copy; {currentYear} Davide Di Marsilio</p>
 	</div>
 	<p class="socials">
-		<a href="https://twitter.com/me"> Twitter</a>
-		<a href="https://github.com/me"> GitHub</a>
+		<a href="https://twitter.com/marsilio_davide"> Twitter</a>
+		<a href="https://github.com/Ludeth"> GitHub</a>
+		<a href="https://it.linkedin.com/in/davide-di-marsilio"> Linkedin</a>
 	</p>
 </footer>
 <style>
