--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -12,7 +12,7 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
-	{ label: 'Twitter', href: 'https://twitter.com/me', icon: 'twitter-logo' },
+	{ label: 'Twitter', href: 'https://twitter.com/marsilio_davide', icon: 'twitter-logo' },
 	{ label: 'GitHub', href: 'https://github.com/Ludeth', icon: 'github-logo' },
 	{ label: 'Linkedin', href: 'https://it.linkedin.com/in/davide-di-marsilio', icon: 'linkedin-logo' },
 	{ label: 'Discord', href: 'https://discordapp.com/users/388026142742937600', icon: 'discord-logo' },
