--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,18 +5,18 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-	</div>
-	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<h2>Proficient in OS</h2>
+		<p>With a genuine passion for technology and a broad expertise in operating systems, mainly Windows, I possess a deep understanding of various OS platforms. Additionally, my proficiency extends to Active Directory and Azure and Python scripting, allowing me to leverage these powerful tools for efficient operations within diverse IT environments.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>Clear Communicator</h2>
+		<p>With a background as a Helpdesk operator, I have honed my communication skills to a high level. I excel in understanding and addressing the needs and requirements of clients. My ability to communicate clearly and actively listen enables me to establish strong working relationships and produce designs that meet and exceed expectations.</p>
+	</div>
+	<div class="stack gap-2 lg:gap-4">
+		<Icon icon="paint-brush" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Artistic Vision</h2>
+		<p>As an artist and freelance logo designer, I possess a keen artistic vision that allows me to create visually appealing and unique designs. Whether it's a logo, illustration, or any artistic project, I bring creativity, imagination, and attention to detail to deliver exceptional results.</p>
 	</div>
 </section>
 
