--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -1,22 +1,23 @@
 ---
+import i18next, { t, changeLanguage } from "i18next";
 import Icon from './Icon.astro';
 ---
 
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Proficient in OS</h2>
-		<p>With a genuine passion for technology and a broad expertise in operating systems, mainly Windows, I possess a deep understanding of various OS platforms. Additionally, my proficiency extends to Active Directory and Azure and Python scripting, allowing me to leverage these powerful tools for efficient operations within diverse IT environments.</p>
+		<h2>{t("site.ost")}</h2>
+		<p>{t("site.osd")}</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Clear Communicator</h2>
-		<p>With a background as a Helpdesk operator, I have honed my communication skills to a high level. I excel in understanding and addressing the needs and requirements of clients. My ability to communicate clearly and actively listen enables me to establish strong working relationships and produce designs that meet and exceed expectations.</p>
+		<h2>{t("site.cct")}</h2>
+		<p>{t("site.ccd")}</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="paint-brush" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Artistic Vision</h2>
-		<p>As an artist and freelance logo designer, I possess a keen artistic vision that allows me to create visually appealing and unique designs. Whether it's a logo, illustration, or any artistic project, I bring creativity, imagination, and attention to detail to deliver exceptional results.</p>
+		<h2>{t("site.avt")}</h2>
+		<p>{t("site.avd")}</p>
 	</div>
 </section>
 
