--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@
 // https://docs.astro.build/en/core-concepts/layouts/
 
 // Component Imports
+import i18next from "i18next";
 import MainHead from '../components/MainHead.astro';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
@@ -15,7 +16,7 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<html lang="en">
+<html lang={i18next.language}>
 	<head>
 		<MainHead title={title} description={description} />
 	</head>
