--- a/src/components/LanguageToggle.astro
+++ b/src/components/LanguageToggle.astro
@@ -2,18 +2,18 @@
 import { LanguageSelector } from "astro-i18next/components";
 ---
 
-
 <LanguageSelector showFlag={true} class="box"/>
 
 <style>
       .box {
 		outline: 0;
  		border: 0;
-		font-size: 14px;
-        color: #ae00ff;
+        gap: 0.5rem;
+        color: var(--accent-dark);
+		text-decoration: none;
         background: transparent;
-        border-radius: 5px;
-		box-shadow: none;
+        font-size: var(--text-sm);
+        font-weight: bold;
       }
 </style>
 
