--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -50,8 +50,8 @@ const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[]
 								'link',
 								{
 									active:
-										Astro.url.pathname === href ||
-										(href !== '/' && Astro.url.pathname.startsWith(href)),
+										Astro.url.pathname === localizePath(href) ||
+										(href !== '/' && Astro.url.pathname.startsWith(localizePath(href))),
 								},
 							]}
 							href={localizePath(href)}
