--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { t, changeLanguage } from "i18next";
+import { t } from "i18next";
 import CallToAction from './CallToAction.astro';
 import Icon from './Icon.astro';
 ---
