--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import i18next, { t, changeLanguage } from "i18next";
+import { t, changeLanguage, language } from "i18next";
 import { getCollection } from "astro:content";
+import { localizePath } from "astro-i18next";
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
 import BaseLayout from "../layouts/BaseLayout.astro";
 // Component Imports
@@ -17,7 +18,7 @@ import Skills from "../components/Skills.astro";
 changeLanguage("en");
 
 // Content Fetching: List four most recent work projects
-const projects = (await getCollection("work"))
+const projects = (await getCollection("work_" + language))
     .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
     .slice(0, 4);
 ---
@@ -53,8 +54,8 @@ const projects = (await getCollection("work"))
 		<main class="wrapper stack gap-20 lg:gap-48">
 			<section class="section with-background with-cta">
 				<header class="section-header stack gap-2 lg:gap-4">
-					<h3>Selected Work</h3>
-					<p>Take a look below at some of my featured work for clients from the past few years.</p>
+					<h3>{t("site.selectedwork")}</h3>
+					<p>{t("site.selectedworkd")}</p>
 				</header>
 
 				<div class="gallery">
@@ -70,8 +71,8 @@ const projects = (await getCollection("work"))
 				</div>
 
 				<div class="cta">
-					<CallToAction href="/work/">
-						View All
+					<CallToAction href={localizePath("/work/")}>
+						{t("site.selectedworkb")}
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
 				</div>
