--- a/src/pages/it/work/[...slug].astro
+++ b/src/pages/it/work/[...slug].astro
@@ -1,5 +1,6 @@
 ---
-import { changeLanguage } from "i18next";
+import { changeLanguage, language } from "i18next";
+import { localizePath } from "astro-i18next";
 import { CollectionEntry, getCollection } from "astro:content";
 import BaseLayout from "../../../layouts/BaseLayout.astro";
 import ContactCTA from "../../../components/ContactCTA.astro";
@@ -9,14 +10,16 @@ import Pill from "../../../components/Pill.astro";
 
 changeLanguage("it");
 
+// Calculate the correct collection to load (multilanguage collections)
+const varcollection = "work" + language;
 interface Props {
-    entry: CollectionEntry<"work">;
+    entry: CollectionEntry<varcollection>;
 }
 // This is a dynamic route that generates a page for every Markdown file in src/content/
 // Read more about dynamic routes and this `getStaticPaths` function in the Astro docs:
 // https://docs.astro.build/en/core-concepts/routing/#dynamic-routes
 export async function getStaticPaths() {
-    const work = await getCollection("work");
+    const work = await getCollection("work_" + language);
     return work.map((entry) => ({
         params: { slug: entry.slug },
         props: { entry },
@@ -31,7 +34,7 @@ const { Content } = await entry.render();
 		<div class="stack gap-15">
 			<header>
 				<div class="wrapper stack gap-2">
-					<a class="back-link" href="/work/"><Icon icon="arrow-left" /> Work</a>
+					<a class="back-link" href={localizePath("/work/")}><Icon icon="arrow-left" /> Work</a>
 					<Hero title={entry.data.title} align="start">
 						<div class="details">
 							<div class="tags">
