--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { t, changeLanguage, language } from "i18next";
+import i18next, { t, changeLanguage, language } from "i18next";
 import { getCollection } from "astro:content";
 import { localizePath } from "astro-i18next";
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
@@ -18,7 +18,7 @@ import Skills from "../components/Skills.astro";
 changeLanguage("en");
 
 // Content Fetching: List four most recent work projects
-const projects = (await getCollection("work_" + language))
+const projects = (await getCollection("work_" + i18next.language))
     .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
     .slice(0, 4);
 ---
