--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -1,5 +1,5 @@
 ---
-import { t, changeLanguage, language } from "i18next";
+import i18next, { t, changeLanguage, language } from "i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import ContactCTA from "../../components/ContactCTA.astro";
@@ -9,7 +9,7 @@ import Grid from "../../components/Grid.astro";
 
 changeLanguage("it");
 
-const projects = (await getCollection("work_" + language)).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf());
+const projects = (await getCollection("work_" + i18next.language)).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf());
 ---
 
 <BaseLayout
