--- a/src/components/LanguageToggle.astro
+++ b/src/components/LanguageToggle.astro
@@ -15,6 +15,7 @@ import { LanguageSelector } from "astro-i18next/components";
         background: transparent;
         font-size: var(--text-sm);
         font-weight: bold;
+        font-family: var(--font-brand);
       }
       .icona{
         
