--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -3,7 +3,7 @@ import { localizePath } from "astro-i18next";
 import type { CollectionEntry } from 'astro:content';
 
 interface Props {
-	project: CollectionEntry<'work'>;
+	project: CollectionEntry<'work_en'>;
 }
 
 const { data, slug } = Astro.props.project;
