Optimization + image slider
Turned all jpg into webp, added google font optimizer and added an image slider inside Work page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,7 +17,7 @@ changeLanguage("en");
 				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
+					src="/assets/at-work.webp"
 					alt="Davide Di Marsilio at work with a colleague"
 				/>
 			</Hero>
