--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -32,6 +32,26 @@ const projects = (await getCollection("work_" + i18next.language)).sort((a, b) =
 					))
 				}
 			</Grid>
+			<script
+				defer
+				src="https://unpkg.com/img-comparison-slider@7/dist/index.js"
+				></script>
+				<link
+				rel="stylesheet"
+				href="https://unpkg.com/img-comparison-slider@7/dist/styles.css"
+				/>
+				<div></div>
+				<div></div>
+				<Hero
+				title={t("work.restauro")}
+				tagline={t("work.restaurod")}
+				align="start"
+				/>
+
+				<img-comparison-slider>
+				<img slot="first" src="/public/assets/stock-1.webp" />
+				<img slot="second" src="/public/assets/stock-2.webp" />
+				</img-comparison-slider>
 		</main>
 		<ContactCTA />
 	</div>
