--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -49,8 +49,8 @@ const projects = (await getCollection("work_" + i18next.language)).sort((a, b) =
 				/>
 
 				<img-comparison-slider>
-				<img slot="first" src="/public/assets/stock-1.webp" />
-				<img slot="second" src="/public/assets/stock-2.webp" />
+				<img slot="first" src="/assets/stock-1.webp" />
+				<img slot="second" src="/assets/stock-2.webp" />
 				</img-comparison-slider>
 		</main>
 		<ContactCTA />
