--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { changeLanguage, language } from "i18next";
+import i18next, { changeLanguage } from "i18next";
 import { localizePath } from "astro-i18next";
 import { CollectionEntry, getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
