--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { t, changeLanguage, language } from "i18next";
+import i18next, { t, changeLanguage } from "i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
 import ContactCTA from "../components/ContactCTA.astro";
@@ -35,24 +35,54 @@ const projects = (await getCollection("work_" + i18next.language)).sort((a, b) =
 			<script
 				defer
 				src="https://unpkg.com/img-comparison-slider@7/dist/index.js"
-				></script>
-				<link
+			></script>
+			<link
 				rel="stylesheet"
 				href="https://unpkg.com/img-comparison-slider@7/dist/styles.css"
-				/>
-				<div></div>
-				<div></div>
-				<Hero
+			/>
+			<Hero
 				title={t("work.restauro")}
 				tagline={t("work.restaurod")}
 				align="start"
 				/>
 
-				<img-comparison-slider>
-				<img slot="first" src="/assets/stock-1.webp" />
-				<img slot="second" src="/assets/stock-2.webp" />
+			<Grid>
+				<div>
+				<img-comparison-slider class="slider-example-opacity-and-size rendered" tabindex="0">
+				<img slot="first"  src="/assets/artworks/Rework_prima.webp" />
+				<img slot="second" src="/assets/artworks/Rework_dopo.webp" />
 				</img-comparison-slider>
+				</div>
+				<div class="text">
+					<h4>{t("work.restauro1")}</h4>
+					{t("work.restauro1d")}
+				</div>
+			</Grid>
 		</main>
 		<ContactCTA />
 	</div>
 </BaseLayout>
+
+<style>
+.slider-example-opacity-and-size {
+    --default-handle-width: 100px;
+}
+
+.slider-example-opacity-and-size:focus {
+    --default-handle-opacity: 0;
+}
+
+  img-comparison-slider {
+	--divider-width: 2px;
+    --divider-color: #ac73b8;
+}
+
+h4{
+	margin-top: 1.5em;
+    margin-bottom: 0.5em;
+}
+.text {
+  font-size: var(--text-lg);
+}
+
+</style>
