--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -1,5 +1,6 @@
 ---
 import i18next, { t, changeLanguage } from "i18next";
+import { localizePath } from "astro-i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import ContactCTA from "../../components/ContactCTA.astro";
@@ -9,58 +10,85 @@ import Grid from "../../components/Grid.astro";
 
 changeLanguage("it");
 
-const projects = (await getCollection("work_" + i18next.language)).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf());
+const projects = (await getCollection("work_" + i18next.language)).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 4);
 ---
 
-<BaseLayout
-	title={t("work.myworkt")}
-	description={t("work.myworktd")}
->
-	<div class="stack gap-20">
-		<main class="wrapper stack gap-8">
-			<Hero
-				title={t("work.mywork")}
-				tagline={t("work.myworkd")}
-				align="start"
-			/>
-			<Grid variant="offset">
-				{
-					projects.map((project) => (
-						<li>
-							<PortfolioPreview project={project} />
-						</li>
-					))
-				}
-			</Grid>
-			<script
-				defer
-				src="https://unpkg.com/img-comparison-slider@7/dist/index.js"
-			></script>
-			<link
-				rel="stylesheet"
-				href="https://unpkg.com/img-comparison-slider@7/dist/styles.css"
-			/>
-			<Hero
-				title={t("work.restauro")}
-				tagline={t("work.restaurod")}
-				align="start"
-				/>
+<BaseLayout title={t( "work.myworkt")} description={t( "work.myworktd")}>
+  <div class="stack gap-20">
+      <main class="wrapper stack gap-8">
+          <Hero title={t( "work.mywork")} tagline={t( "work.myworkd")} align="start" />
+          <Grid variant="offset">
+              { projects.map((project) => (
+              <li>
+                  <PortfolioPreview project={project} />
+              </li>
+              )) }
+          </Grid>
+          <!-- Comparison Load -->
+          <script defer src="https://unpkg.com/img-comparison-slider@7/dist/index.js"></script>
+          <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/styles.css" />
+          <!-- End Comparison Load -->
 
-			<Grid>
-				<div>
-				<img-comparison-slider class="slider-example-opacity-and-size rendered" tabindex="0">
-				<img slot="first"  src="/assets/artworks/Rework_prima.webp" />
-				<img slot="second" src="/assets/artworks/Rework_dopo.webp" />
-				</img-comparison-slider>
-				</div>
-				<div class="text">
-					<h4>{t("work.restauro1")}</h4>
-					{t("work.restauro1d")}
-				</div>
-			</Grid>
-		</main>
-		<ContactCTA />
-	</div>
+          <Hero title={t( "work.work1")} tagline={t( "work.work2")} align="start" />
+          <!-- 3DGrid -->
+          <div class="grid image-grid" style='margin-top:-10rem;'>
+              <div class="grid-block">
+                  <h4>You</h4>
+                  <div class="tile">
+                      <a class="tile-link" href={localizePath( "/work/you")}>
+                          <img class="tile-img tile-img1" src="/assets/artworks/p1.webp" alt="You">
+                      </a>
+                  </div>
+              </div>
+
+              <div class="grid-block">
+                  <h4>Energy and Light</h4>
+                  <div class="tile">
+                      <a class="tile-link" href={localizePath( "/work/energy-and-light")}>
+                          <img class="tile-img tile-img1" src="/assets/artworks/p2.webp" alt="Energy and Light">
+                      </a>
+                  </div>
+              </div>
+
+              <div class="grid-block">
+                  <h4>Quirks</h4>
+                  <div class="tile">
+                      <a class="tile-link" href={localizePath( "/work/quirks")}>
+                          <img class="tile-img tile-img1" src="/assets/artworks/s1.webp" alt="Quirks">
+                      </a>
+                  </div>
+              </div>
+              <div class="grid-block">
+                  <h4>Wonder</h4>
+                  <div class="tile">
+                      <a class="tile-link" href={localizePath( "/work/wonder")}>
+                          <img class="tile-img tile-img1" src="/assets/artworks/s2.webp" alt="Wonder">
+                      </a>
+                  </div>
+              </div>
+
+          </div>
+          <!-- End 3DGrid -->
+
+          <Hero title={t( "work.restauro")} tagline={t( "work.restaurod")} align="start" />
+          <!-- Restauro -->
+          <Grid>
+              <div>
+                  <img-comparison-slider class="slider-example-opacity-and-size rendered" tabindex="0">
+                      <img slot="first" src="/assets/artworks/Rework_prima.webp" />
+                      <img slot="second" src="/assets/artworks/Rework_dopo.webp" />
+                  </img-comparison-slider>
+              </div>
+              <div class="text">
+                  <h4>{t("work.restauro1")}</h4>
+                  {t("work.restauro1d")}
+              </div>
+          </Grid>
+          <!-- End Restauro -->
+
+      </main>
+      <ContactCTA />
+  </div>
 </BaseLayout>
 
 <style>
@@ -84,5 +112,151 @@ h4{
 .text {
   font-size: var(--text-lg);
 }
+
+html {
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  font-size: 1rem;
+  line-height: 1.25;
+  background-color: #18222d;
+}
+
+.grid {
+  width: 100%;
+  max-width: 60rem;
+  margin-left: auto;
+  margin-right: auto;
+
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.grid-block {
+  width: 50%;
+  min-height: 11.25rem;
+  padding: 1rem;
+}
+
+.image-grid {
+  -webkit-transform: rotateX(45deg) rotateZ(45deg);
+  transform: rotateX(45deg) rotateZ(45deg);
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+
+.image-grid .tile-link:hover .tile-img {
+  top: -1rem;
+  left: -1rem;
+}
+
+.image-grid .tile-img {
+  position: relative;
+  top: 0;
+  left: 0;
+  -webkit-transition-property: opacity, top, left, box-shadow;
+  transition-property: opacity, top, left, box-shadow;
+}
+
+.tile-link {
+  display: block;
+}
+
+.tile-link:hover .tile-img {
+  opacity: 1;
+}
+
+.tile-link:hover .tile-img-link {
+  display: block;
+}
+
+.tile-link:hover .tile-img-link:hover .tile-img {
+  opacity: 0.5;
+}
+
+.tile-img {
+  display: block;
+  width: 100%;
+  height: auto;
+  opacity: 1;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.125s;
+  transition-duration: 0.125s;
+  -webkit-transition-timing-function: ease-in;
+  transition-timing-function: ease-in;
+}
+.tile-link:hover .tile-img1 {
+  box-shadow: 5px 5px rgba(244, 170, 200, 0.4),
+    10px 10px rgba(244, 170, 200, 0.3), 15px 15px rgba(244, 170, 200, 0.2),
+    20px 20px rgba(244, 170, 200, 0.1), 25px 25px rgba(244, 170, 200, 0.05);
+}
+
+.tile-link:hover .tile-img2 {
+  box-shadow: 5px 5px rgba(45, 186, 233, 0.4), 10px 10px rgba(45, 186, 233, 0.3),
+    15px 15px rgba(45, 186, 233, 0.2), 20px 20px rgba(45, 186, 233, 0.1),
+    25px 25px rgba(45, 186, 233, 0.05);
+}
+
+.tile-link:hover .tile-img3 {
+  box-shadow: 5px 5px rgba(214, 221, 244, 0.4),
+    10px 10px rgba(214, 221, 244, 0.3), 15px 15px rgba(214, 221, 244, 0.2),
+    20px 20px rgba(214, 221, 244, 0.1), 25px 25px rgba(214, 221, 244, 0.05);
+}
+
+.tile-link:hover .tile-img4 {
+  box-shadow: 5px 5px rgba(82, 119, 192, 0.4), 10px 10px rgba(82, 119, 192, 0.3),
+    15px 15px rgba(82, 119, 192, 0.2), 20px 20px rgba(82, 119, 192, 0.1),
+    25px 25px rgba(82, 119, 192, 0.05);
+}
+
+.tile-link:hover .tile-img5 {
+  box-shadow: 5px 5px rgba(138, 218, 245, 0.4),
+    10px 10px rgba(138, 218, 245, 0.3), 15px 15px rgba(138, 218, 245, 0.2),
+    20px 20px rgba(138, 218, 245, 0.1), 25px 25px rgba(138, 218, 245, 0.05);
+}
+
+.tile-link:hover .tile-img6 {
+  box-shadow: 5px 5px rgba(203, 215, 193, 0.4),
+    10px 10px rgba(203, 215, 193, 0.3), 15px 15px rgba(203, 215, 193, 0.2),
+    20px 20px rgba(203, 215, 193, 0.1), 25px 25px rgba(203, 215, 193, 0.05);
+}
+
+.tile-link:hover .tile-img7 {
+  box-shadow: 5px 5px rgba(91, 209, 250, 0.4), 10px 10px rgba(91, 209, 250, 0.3),
+    15px 15px rgba(91, 209, 250, 0.2), 20px 20px rgba(91, 209, 250, 0.1),
+    25px 25px rgba(91, 209, 250, 0.05);
+}
+
+.tile-link:hover .tile-img8 {
+  box-shadow: 5px 5px rgba(145, 156, 196, 0.4),
+    10px 10px rgba(145, 156, 196, 0.3), 15px 15px rgba(145, 156, 196, 0.2),
+    20px 20px rgba(145, 156, 196, 0.1), 25px 25px rgba(145, 156, 196, 0.05);
+}
+
+.tile-link:hover .tile-img9 {
+  box-shadow: 5px 5px rgba(188, 97, 129, 0.4), 10px 10px rgba(188, 97, 129, 0.3),
+    15px 15px rgba(188, 97, 129, 0.2), 20px 20px rgba(188, 97, 129, 0.1),
+    25px 25px rgba(188, 97, 129, 0.05);
+}
+
+.tile-link:hover .tile-img10 {
+  box-shadow: 5px 5px rgba(4, 140, 231, 0.4), 10px 10px rgba(4, 140, 231, 0.3),
+    15px 15px rgba(4, 140, 231, 0.2), 20px 20px rgba(4, 140, 231, 0.1),
+    25px 25px rgba(4, 140, 231, 0.05);
+}
+
 
 </style>
