--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -7,6 +7,7 @@ import ContactCTA from "../components/ContactCTA.astro";
 import PortfolioPreview from "../components/PortfolioPreview.astro";
 import Hero from "../components/Hero.astro";
 import Grid from "../components/Grid.astro";
+import Icon from "../components/Icon.astro";
 
 changeLanguage("en");
 
@@ -63,6 +64,35 @@ const projects = (await getCollection("work_" + i18next.language)).sort((a, b) =
               </div>
           </div>
           <!-- End 3DGrid -->
+
+          <!-- Logo -->
+          <Hero title={t( "work.work3")} tagline={t( "work.work4")} align="start" />
+          <Grid>
+          <a href={localizePath( "/work/pdj")}>
+          <img src="/assets/artworks/logo1.webp" width="50%" height="50%" alt="Prodotti dal Giappone" style="border-radius: 50%;">
+          </a>
+          <div class="text">
+            <h4>{t("work.work5")}</h4>
+            {t("work.work6")}<br /><br />
+
+            <Icon icon="arrow-left" color="var(--accent-dark)" size="1.4em"/>
+            <i>{t("work.work9")}</i>
+
+          </div>
+          <a href={localizePath( "/work/hosto")}>
+          <img src="/assets/artworks/logo2.webp" width="60%" height="60%" alt="Prodotti dal Giappone" style="border-radius: 30px;">
+          </a>
+          <div class="text">
+            <h4>{t("work.work7")}</h4>
+            {t("work.work8")}<br /><br />
+            
+            <Icon icon="arrow-left" color="var(--accent-dark)" size="1.4em"/>
+            <i>{t("work.work10")}</i>
+            <a href="https://beta.hosto.cc/">Hosto</a>
+
+          </div>
+          </Grid>
+          <!-- End Logo-->
 
           <Hero title={t( "work.restauro")} tagline={t( "work.restaurod")} align="start" />
           <!-- Restauro -->
