--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { t, changeLanguage } from "i18next";
+import i18next, { t, changeLanguage, language } from "i18next";
 import { localizePath } from "astro-i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
