--- a/src/pages/it/index.astro
+++ b/src/pages/it/index.astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { t, changeLanguage, language } from "i18next";
+import i18next, { t, changeLanguage} from "i18next";
 import { getCollection } from "astro:content";
 import { localizePath } from "astro-i18next";
 // Layout import — provides basic page elements: <head>, <nav>, <footer> etc.
