--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { t, changeLanguage } from "i18next";
+import { t, changeLanguage } from "i18next";
 import { localizePath } from "astro-i18next";
 import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
@@ -11,7 +11,7 @@ import Icon from "../components/Icon.astro";
 
 changeLanguage("en");
 
-const projects = (await getCollection("work_" + i18next.language)).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 4);
+const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 4);
 ---
 
 <BaseLayout title={t( "work.myworkt")} description={t( "work.myworktd")}>
