--- a/src/pages/work/[...slug].astro
+++ b/src/pages/work/[...slug].astro
@@ -1,5 +1,5 @@
 ---
-import i18next, { changeLanguage} from "i18next";
+import { changeLanguage } from "i18next";
 import { localizePath } from "astro-i18next";
 import { CollectionEntry, getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
@@ -10,16 +10,14 @@ import Pill from "../../components/Pill.astro";
 
 changeLanguage("en");
 
-// Calculate the correct collection to load (multilanguage collections)
-const varcollection = "work" + i18next.language;
 interface Props {
-    entry: CollectionEntry<varcollection>;
+    entry: CollectionEntry<"work_en">;
 }
 // This is a dynamic route that generates a page for every Markdown file in src/content/
 // Read more about dynamic routes and this `getStaticPaths` function in the Astro docs:
 // https://docs.astro.build/en/core-concepts/routing/#dynamic-routes
 export async function getStaticPaths() {
-    const work = await getCollection("work_" + i18next.language);
+    const work = await getCollection("work_en");
     return work.map((entry) => ({
         params: { slug: entry.slug },
         props: { entry },
