--- a/src/pages/it/work/[...slug].astro
+++ b/src/pages/it/work/[...slug].astro
@@ -11,13 +11,13 @@ import Pill from "../../../components/Pill.astro";
 changeLanguage("it");
 
 interface Props {
-    entry: CollectionEntry<"work_en">;
+    entry: CollectionEntry<"work_it">;
 }
 // This is a dynamic route that generates a page for every Markdown file in src/content/
 // Read more about dynamic routes and this `getStaticPaths` function in the Astro docs:
 // https://docs.astro.build/en/core-concepts/routing/#dynamic-routes
 export async function getStaticPaths() {
-    const work = await getCollection("work_en");
+    const work = await getCollection("work_it");
     return work.map((entry) => ({
         params: { slug: entry.slug },
         props: { entry },
