--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -75,7 +75,7 @@ const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishD
                   <img src="/assets/artworks/logo1.webp" width="60%" height="60%" alt="Prodotti dal Giappone" style="border-radius: 30px;">
                   </a>
                 </div>
-                <div>
+                <div style="font-size: var(--text-lg);">
                   <h4>{t("work.work5")}</h4> {t("work.work6")} <br>
                   <br>
                   <Icon icon="arrow-up" color="var(--accent-dark)" size="1.4em" />
@@ -87,10 +87,10 @@ const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishD
               <br>
               <div>
                 <a href={localizePath( "/work/hosto" )}>
-                  <img src="/assets/artworks/logo2.webp" width="80%" height="80%" alt="Hosto" style="border-radius: 30px;">
+                  <img src="/assets/artworks/logo2.webp" width="90%" height="90%" alt="Hosto" style="border-radius: 30px;">
                 </a>
               </div>
-              <div>
+              <div style="font-size: var(--text-lg);">
                 <h4>{t("work.work7")}</h4> {t("work.work8")} <br>
                 <br>
                 <Icon icon="arrow-up" color="var(--accent-dark)" size="1.4em" />
@@ -99,6 +99,8 @@ const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishD
               </div>
             </div>
           </Grid>
+          <br>
+          <br>
           <!-- End Logo-->
 
           <Hero title={t( "work.restauro")} tagline={t( "work.restaurod")} align="start" />
@@ -125,15 +127,18 @@ const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishD
 <style>
 .slider-example-opacity-and-size {
     --default-handle-width: 100px;
+    transition: box-shadow 200ms ease-in-out;
 }
 
 .slider-example-opacity-and-size:focus {
     --default-handle-opacity: 0;
+    outline: none;
+    box-shadow: 0px 0px 15px 5px #5f5f5f5c;
 }
 
   img-comparison-slider {
 	--divider-width: 2px;
-    --divider-color: #ac73b8;
+    --divider-color: #ad5da5;
 }
 
 h4{
