--- a/src/pages/it/work.astro
+++ b/src/pages/it/work.astro
@@ -11,7 +11,7 @@ import Icon from "../../components/Icon.astro";
 
 changeLanguage("it");
 
-const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 5);
+const projects = (await getCollection("work_it")).sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf()).slice(0, 5);
 ---
 
 <BaseLayout title={t( "work.myworkt")} description={t( "work.myworktd")}>
@@ -115,6 +115,8 @@ const projects = (await getCollection("work_en")).sort((a, b) => b.data.publishD
               <div class="text">
                   <h4>{t("work.restauro1")}</h4>
                   {t("work.restauro1d")}
+                  <h4>{t("work.restauro2")}</h4>
+                  {t("work.restauro2d")}
               </div>
           </Grid>
           <!-- End Restauro -->
@@ -235,64 +237,9 @@ body {
   transition-timing-function: ease-in;
 }
 .tile-link:hover .tile-img1 {
-  box-shadow: 5px 5px rgba(244, 170, 200, 0.4),
-    10px 10px rgba(244, 170, 200, 0.3), 15px 15px rgba(244, 170, 200, 0.2),
-    20px 20px rgba(244, 170, 200, 0.1), 25px 25px rgba(244, 170, 200, 0.05);
+  box-shadow: 5px 5px var(--3d-layer1),
+    10px 10px var(--3d-layer2), 15px 15px var(--3d-layer3),
+    20px 20px var(--3d-layer4), 25px 25px var(--3d-layer5);
 }
-
-.tile-link:hover .tile-img2 {
-  box-shadow: 5px 5px rgba(45, 186, 233, 0.4), 10px 10px rgba(45, 186, 233, 0.3),
-    15px 15px rgba(45, 186, 233, 0.2), 20px 20px rgba(45, 186, 233, 0.1),
-    25px 25px rgba(45, 186, 233, 0.05);
-}
-
-.tile-link:hover .tile-img3 {
-  box-shadow: 5px 5px rgba(214, 221, 244, 0.4),
-    10px 10px rgba(214, 221, 244, 0.3), 15px 15px rgba(214, 221, 244, 0.2),
-    20px 20px rgba(214, 221, 244, 0.1), 25px 25px rgba(214, 221, 244, 0.05);
-}
-
-.tile-link:hover .tile-img4 {
-  box-shadow: 5px 5px rgba(82, 119, 192, 0.4), 10px 10px rgba(82, 119, 192, 0.3),
-    15px 15px rgba(82, 119, 192, 0.2), 20px 20px rgba(82, 119, 192, 0.1),
-    25px 25px rgba(82, 119, 192, 0.05);
-}
-
-.tile-link:hover .tile-img5 {
-  box-shadow: 5px 5px rgba(138, 218, 245, 0.4),
-    10px 10px rgba(138, 218, 245, 0.3), 15px 15px rgba(138, 218, 245, 0.2),
-    20px 20px rgba(138, 218, 245, 0.1), 25px 25px rgba(138, 218, 245, 0.05);
-}
-
-.tile-link:hover .tile-img6 {
-  box-shadow: 5px 5px rgba(203, 215, 193, 0.4),
-    10px 10px rgba(203, 215, 193, 0.3), 15px 15px rgba(203, 215, 193, 0.2),
-    20px 20px rgba(203, 215, 193, 0.1), 25px 25px rgba(203, 215, 193, 0.05);
-}
-
-.tile-link:hover .tile-img7 {
-  box-shadow: 5px 5px rgba(91, 209, 250, 0.4), 10px 10px rgba(91, 209, 250, 0.3),
-    15px 15px rgba(91, 209, 250, 0.2), 20px 20px rgba(91, 209, 250, 0.1),
-    25px 25px rgba(91, 209, 250, 0.05);
-}
-
-.tile-link:hover .tile-img8 {
-  box-shadow: 5px 5px rgba(145, 156, 196, 0.4),
-    10px 10px rgba(145, 156, 196, 0.3), 15px 15px rgba(145, 156, 196, 0.2),
-    20px 20px rgba(145, 156, 196, 0.1), 25px 25px rgba(145, 156, 196, 0.05);
-}
-
-.tile-link:hover .tile-img9 {
-  box-shadow: 5px 5px rgba(188, 97, 129, 0.4), 10px 10px rgba(188, 97, 129, 0.3),
-    15px 15px rgba(188, 97, 129, 0.2), 20px 20px rgba(188, 97, 129, 0.1),
-    25px 25px rgba(188, 97, 129, 0.05);
-}
-
-.tile-link:hover .tile-img10 {
-  box-shadow: 5px 5px rgba(4, 140, 231, 0.4), 10px 10px rgba(4, 140, 231, 0.3),
-    15px 15px rgba(4, 140, 231, 0.2), 20px 20px rgba(4, 140, 231, 0.1),
-    25px 25px rgba(4, 140, 231, 0.05);
-}
-
 
 </style>
