--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -83,11 +83,11 @@ changeLanguage("en");
 					<br>
 					<h2>EIPASS IT Security</h2>
 					<p><strong><a href="https://en.eipass.com/" style="text-decoration: none;">EIPASS</a></strong></p>
-					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/public/documents/EIPASS IT Security - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>EIPASS 7 Moduli User</h2>
 					<p><strong><a href="https://en.eipass.com/" style="text-decoration: none;">EIPASS</a></strong></p>
-					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/public/documents/EIPASS IT Security - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>CSS, JavaScript And Python Complete Course</h2>
 					<p><strong><a href="https://www.udemy.com/" style="text-decoration: none;">Udemy</a></strong></p>
@@ -99,7 +99,7 @@ changeLanguage("en");
 					<br>
 					<h2>B2 First - Score 162</h2>
 					<p><strong><a href="https://www.cambridge.org/" style="text-decoration: none;">Cambridge University Press & Assessment</a></strong></p>
-					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/public/documents/B2 First - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/documents/B2 First - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
 					</div>
 			</section>
 			<section>
