--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -49,7 +49,7 @@ changeLanguage("en");
 			<section>
 				<h2 class="section-title">{t("about.exp")}</h2>
 				<div class="content">
-					<h2>HelpDesk and Service Desk Technician - <a href="https://www.europassistance.it/">Europassistance</a> c/o <a href="https://www.ecit.it/">ECIT S.p.A.</a></h2>
+					<h2>HelpDesk and Service Desk Technician - <a href="https://www.europassistance.it/" target="_blank">Europassistance</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
 					<h2 style="color:var(--gray-300);">Early 2023 | Full-time</h2>
 					<p><Icon icon="windows" size="1.33em" /> Windows Systems troubleshooting</p>
 					<p><Icon icon="user-folder" size="1.33em" /> Managing Active Directory</p>
@@ -58,7 +58,7 @@ changeLanguage("en");
 					<p><Icon icon="desktop-tower" size="1.33em" /> Remote and On-site IT support</p>
 					<p><Icon icon="hard-drives" size="1.33em" /> ESXi servers management</p>
 					<br>
-					<h2>Control Room operator - <a href="https://www.luxottica.com/">Luxottica</a> c/o <a href="https://www.ecit.it/">ECIT S.p.A.</a></h2>
+					<h2>Control Room operator - <a href="https://www.luxottica.com/" target="_blank">Luxottica</a> c/o <a href="https://www.ecit.it/" target="_blank">ECIT S.p.A.</a></h2>
 					<h2 style="color:var(--gray-300);">Early 2021 | Full-time</h2>
 					<p><Icon icon="pulse" size="1.33em" /> Monitoring software usage (Nagios & Solarwinds)</p>
 					<p><Icon icon="linux-logo" size="1.33em" /> Linux servers management</p>
@@ -66,7 +66,7 @@ changeLanguage("en");
 					<p><Icon icon="globe-simple" size="1.33em" /> Monitoring company IT infrastructure (switches, routers, servers and so on)</p>
 					<p><Icon icon="square-four" size="1.33em" /> Optimize Azure costs and usage</p>
 					<br>
-					<h2>Recording Studio Technician - <a href="https://ilclandestinogiornale.italiasera.it/">DComunication</a></h2>
+					<h2>Recording Studio Technician - <a href="https://ilclandestinogiornale.italiasera.it/" target="_blank">DComunication</a></h2>
 					<h2 style="color:var(--gray-300);">Late 2019 | Fixed-term full-time</h2>
 					<p><Icon icon="video" size="1.33em" /> Video & Photo Editing</p>
 					<p><Icon icon="film-reel" size="1.33em" /> Directing for local television shows and broadcasts</p>
@@ -78,28 +78,28 @@ changeLanguage("en");
 				<h2 class="section-title">{t("about.cert")}</h2>
 					<div>
 					<h2>Azure Fundamentals - AZ-900</h2>
-					<p><strong><a href="https://learn.microsoft.com/en-us/certifications/" style="text-decoration: none;">Microsoft</a></strong></p>
-					<p><strong>Summer 2022 - <Icon icon="certificate" size="1.33em" /><a href="https://www.credly.com/badges/1e4a40d9-096f-4382-b468-5fb8188e41b3/linked_in_profile" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://learn.microsoft.com/en-us/certifications/" target="_blank" style="text-decoration: none;">Microsoft</a></strong></p>
+					<p><strong>Summer 2022 - <Icon icon="certificate" size="1.33em" /><a href="https://www.credly.com/badges/1e4a40d9-096f-4382-b468-5fb8188e41b3/linked_in_profile" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>EIPASS IT Security</h2>
-					<p><strong><a href="https://en.eipass.com/" style="text-decoration: none;">EIPASS</a></strong></p>
-					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
+					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>EIPASS 7 Moduli User</h2>
-					<p><strong><a href="https://en.eipass.com/" style="text-decoration: none;">EIPASS</a></strong></p>
-					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS IT Security - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://en.eipass.com/" target="_blank" style="text-decoration: none;">EIPASS</a></strong></p>
+					<p><strong>Late 2020 - <Icon icon="certificate" size="1.33em" /><a href="/documents/EIPASS 7 Moduli User - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>CSS, JavaScript And Python Complete Course</h2>
-					<p><strong><a href="https://www.udemy.com/" style="text-decoration: none;">Udemy</a></strong></p>
-					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-129e3880-ddaa-4421-ba45-62b91546769e/" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-129e3880-ddaa-4421-ba45-62b91546769e/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>Adobe Premiere Pro</h2>
-					<p><strong><a href="https://www.udemy.com/" style="text-decoration: none;">Udemy</a></strong></p>
-					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-PVZPEVI1/" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://www.udemy.com/" target="_blank" style="text-decoration: none;">Udemy</a></strong></p>
+					<p><strong>Mid 2019 - <Icon icon="certificate" size="1.33em" /><a href="https://www.udemy.com/certificate/UC-PVZPEVI1/" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					<br>
 					<h2>B2 First - Score 162</h2>
-					<p><strong><a href="https://www.cambridge.org/" style="text-decoration: none;">Cambridge University Press & Assessment</a></strong></p>
-					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/documents/B2 First - Davide Di Marsilio.pdf" style="text-decoration: none;"> Certification</a></strong></p>
+					<p><strong><a href="https://www.cambridge.org/" target="_blank" style="text-decoration: none;">Cambridge University Press & Assessment</a></strong></p>
+					<p><strong>Mid 2017 - <Icon icon="certificate" size="1.33em" /><a href="/documents/B2 First - Davide Di Marsilio.pdf" target="_blank" style="text-decoration: none;"> Certification</a></strong></p>
 					</div>
 			</section>
 			<section>
