--- a/src/pages/it/index.astro
+++ b/src/pages/it/index.astro
@@ -23,6 +23,7 @@ const projects = (await getCollection("work_it"))
     .sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
     .slice(0, 3);
 ---
+<html lang="en">
 
 <BaseLayout>
 	<div class="stack gap-20 lg:gap-48">
